objects/DocumentTemplate__mdt.object
<CustomObject>
    <fields>
        <fullName>defaultRecipientEmail__c</fullName>
        <label>Default Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>defaultRecipientName__c</fullName>
        <label>Default Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailSubject__c</fullName>
        <label>Email Subject</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>templateId__c</fullName>
        <label>Template ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Document Template</label>
    <pluralLabel>Document Templates</pluralLabel>
</CustomObject>